--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.ts",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch app.ts",
+    "start": "tsx watch app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
