--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mini-messageboard",
   "version": "1.0.0",
-  "main": "app.ts",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "tsx watch app.ts",
+    "dev": "tsx watch app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
