--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mini-messageboard",
   "version": "1.0.0",
   "main": "app.js",
-  "type": "module",
   "scripts": {
-    "dev": "tsx watch app.ts",
+    "build": "tsc && cp -r src/views src/public dist/",
+    "start": "node dist/app.js",
+    "dev": "tsx watch src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
