--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "mini-messageboard",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc && cp -r src/views src/public dist/",
-    "start": "node dist/app.js",
     "dev": "tsx watch src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
