--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/express": "^5.0.0",
     "@types/pg": "^8.11.10",
     "tsx": "^4.19.2",
