--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "tsx watch src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
+    "pretty": "prettier --write .",
+    "populate-db": "tsx src/db/populateDb.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,6 +26,8 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/express": "^5.0.0",
     "@types/pg": "^8.11.10",
+    "eslint": "^9.18.0",
+    "prettier": "^3.4.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
