chore: change environment variables to a single db url

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,1 @@
-DB_NAME=
-DB_ROLE= #db user
-DB_PASS=
-DB_HOST= #eg: localhost
-DB_PORT= #default: 5432
+DB_URL="postgresql://<role_name>:<role_password>@<db_host>:5432/<db_name>"
